--- a/team.html
+++ b/team.html
@@ -11,7 +11,7 @@
         <h1>Motion Project</h1>
         <nav>
             <ul>
-                <li><a href="main.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="deliverables.html">Project Deliverables</a></li>
                 <li><a href="team.html">Meet the Team</a></li>
             </ul>
