--- a/WebsiteAssets/team.html
+++ b/WebsiteAssets/team.html
@@ -11,7 +11,7 @@
         <h1>Motion Project</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="deliverables.html">Project Deliverables</a></li>
                 <li><a href="team.html">Meet the Team</a></li>
             </ul>
@@ -24,36 +24,36 @@
         
         <div class="team-container">
             <!-- Sammy Allen -->
-            <a href="sammy.html" class="team-member">
-                <img src="images/sammy.jpg" alt="Sammy Allen">
+            <a href="Bios/sammy.html" class="team-member">
+                <img src="../images/sammy.jpg" alt="Sammy Allen">
                 <h3>Sammy Allen</h3>
                 <p>Developer</p>
             </a>
 
             <!-- Drew Wolfe -->
-            <a href="drew.html" class="team-member">
-                <img src="images/drew.jpg" alt="Drew Wolfe">
+            <a href="Bios/drew.html" class="team-member">
+                <img src="../images/drew.jpg" alt="Drew Wolfe">
                 <h3>Drew Wolfe</h3>
                 <p>Developer</p>
             </a>
 
             <!-- Hunter Reinhart -->
-            <a href="hunter.html" class="team-member">
-                <img src="images/hunter.jpg" alt="Hunter Reinhart">
+            <a href="Bios/hunter.html" class="team-member">
+                <img src="../images/hunter.jpg" alt="Hunter Reinhart">
                 <h3>Hunter Reinhart</h3>
                 <p>Developer</p>
             </a>
 
             <!-- Shan Sahib -->
-            <a href="shan.html" class="team-member">
-                <img src="images/shan.jpg" alt="Shan Sahib">
+            <a href="Bios/shan.html" class="team-member">
+                <img src="../images/shan.jpg" alt="Shan Sahib">
                 <h3>Shan Sahib</h3>
                 <p>Developer</p>
             </a>
 
             <!-- Hamza Adnan -->
-            <a href="hamza.html" class="team-member">
-                <img src="images/hamza.jpg" alt="Hamza Adnan">
+            <a href="Bios/hamza.html" class="team-member">
+                <img src="../images/hamza.jpg" alt="Hamza Adnan">
                 <h3>Hamza Adnan</h3>
                 <p>Developer</p>
             </a>
