--- a/WebsiteAssets/Bios/drew.html
+++ b/WebsiteAssets/Bios/drew.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drew Wolfe</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
     <main>
         <div class="bio-container">
             <div class="bio-left">
-                <img src="images/drew.jpg" alt="Drew Wolfe" class="bio-image">
+                <img src="../../images/drew.jpg" alt="Drew Wolfe" class="bio-image">
                 <div class="bio-contact">
                     <h3>Contact</h3>
                     <p><a href="mailto:drewwolfe03@gmail.com">drewwolfe03@gmail.com</a></p>
