--- a/WebsiteAssets/Bios/sammy.html
+++ b/WebsiteAssets/Bios/sammy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sammy Allen</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
     <main>
         <div class="bio-container">
             <div class="bio-left">
-                <img src="images/sammy.jpg" alt="Sammy Allen" class="bio-image">
+                <img src="../../images/sammy.jpg" alt="Sammy Allen" class="bio-image">
                 <div class="bio-contact">
                     <h3>Contact</h3>
                     <p><a href="mailto:smallen5@crimson.ua.edu">smallen5@crimson.ua.edu</a></p>
