--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motion Project Homepage</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="WebsiteAssets/styles.css">
 </head>
 <body>
     <header>
@@ -12,8 +12,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="deliverables.html">Project Deliverables</a></li>
-                <li><a href="team.html">Meet the Team</a></li>
+                <li><a href="WebsiteAssets/deliverables.html">Project Deliverables</a></li>
+                <li><a href="WebsiteAssets/team.html">Meet the Team</a></li>
             </ul>
         </nav>
     </header>    
