Moved Website Images Folder

--- a/WebsiteAssets/Bios/sammy.html
+++ b/WebsiteAssets/Bios/sammy.html
@@ -14,7 +14,7 @@
     <main>
         <div class="bio-container">
             <div class="bio-left">
-                <img src="../../images/sammy.jpg" alt="Sammy Allen" class="bio-image">
+                <img src="../images/sammy.jpg" alt="Sammy Allen" class="bio-image">
                 <div class="bio-contact">
                     <h3>Contact</h3>
                     <p><a href="mailto:smallen5@crimson.ua.edu">smallen5@crimson.ua.edu</a></p>
