--- a/WebsiteAssets/Bios/shan.html
+++ b/WebsiteAssets/Bios/shan.html
@@ -14,7 +14,7 @@
     <main>
         <div class="bio-container">
             <div class="bio-left">
-                <img src="../../images/shan.jpg" alt="Shan Sahib" class="bio-image">
+                <img src="../images/shan.jpg" alt="Shan Sahib" class="bio-image">
                 <div class="bio-contact">
                     <h3>Contact</h3>
                     <p><a href="mailto:shansahib62002@gmail.com">shansahib62002@gmail.com</a></p>
