--- a/WebsiteAssets/team.html
+++ b/WebsiteAssets/team.html
@@ -25,35 +25,35 @@
         <div class="team-container">
             <!-- Sammy Allen -->
             <a href="Bios/sammy.html" class="team-member">
-                <img src="../images/sammy.jpg" alt="Sammy Allen">
+                <img src="images/sammy.jpg" alt="Sammy Allen">
                 <h3>Sammy Allen</h3>
                 <p>Developer</p>
             </a>
 
             <!-- Drew Wolfe -->
             <a href="Bios/drew.html" class="team-member">
-                <img src="../images/drew.jpg" alt="Drew Wolfe">
+                <img src="images/drew.jpg" alt="Drew Wolfe">
                 <h3>Drew Wolfe</h3>
                 <p>Developer</p>
             </a>
 
             <!-- Hunter Reinhart -->
             <a href="Bios/hunter.html" class="team-member">
-                <img src="../images/hunter.jpg" alt="Hunter Reinhart">
+                <img src="images/hunter.jpg" alt="Hunter Reinhart">
                 <h3>Hunter Reinhart</h3>
                 <p>Developer</p>
             </a>
 
             <!-- Shan Sahib -->
             <a href="Bios/shan.html" class="team-member">
-                <img src="../images/shan.jpg" alt="Shan Sahib">
+                <img src="images/shan.jpg" alt="Shan Sahib">
                 <h3>Shan Sahib</h3>
                 <p>Developer</p>
             </a>
 
             <!-- Hamza Adnan -->
             <a href="Bios/hamza.html" class="team-member">
-                <img src="../images/hamza.jpg" alt="Hamza Adnan">
+                <img src="images/hamza.jpg" alt="Hamza Adnan">
                 <h3>Hamza Adnan</h3>
                 <p>Developer</p>
             </a>
