--- a/WebsiteAssets/Bios/drew.html
+++ b/WebsiteAssets/Bios/drew.html
@@ -14,7 +14,7 @@
     <main>
         <div class="bio-container">
             <div class="bio-left">
-                <img src="../../images/drew.jpg" alt="Drew Wolfe" class="bio-image">
+                <img src="../images/drew.jpg" alt="Drew Wolfe" class="bio-image">
                 <div class="bio-contact">
                     <h3>Contact</h3>
                     <p><a href="mailto:drewwolfe03@gmail.com">drewwolfe03@gmail.com</a></p>
