--- a/WebsiteAssets/Bios/hamza.html
+++ b/WebsiteAssets/Bios/hamza.html
@@ -14,7 +14,7 @@
     <main>
         <div class="bio-container">
             <div class="bio-left">
-                <img src="../../images/hamza.jpg" alt="Hamza Adnan" class="bio-image">
+                <img src="../images/hamza.jpg" alt="Hamza Adnan" class="bio-image">
                 <div class="bio-contact">
                     <h3>Contact</h3>
                     <p><a href="mailto:hamza.adnan24@outlook.com">hamza.adnan24@outlook.com</a></p>
