--- a/WebsiteAssets/Bios/hunter.html
+++ b/WebsiteAssets/Bios/hunter.html
@@ -14,7 +14,7 @@
     <main>
         <div class="bio-container">
             <div class="bio-left">
-                <img src="../../images/hunter.jpg" alt="Hunter Reinhart" class="bio-image">
+                <img src="../images/hunter.jpg" alt="Hunter Reinhart" class="bio-image">
                 <div class="bio-contact">
                     <h3>Contact</h3>
                     <p><a href="mailto:hreinhartcodes@gmail.com">hreinhartcodes@gmail.com</a></p>
