Project Website Updates

--- a/WebsiteAssets/deliverables.html
+++ b/WebsiteAssets/deliverables.html
@@ -14,6 +14,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="deliverables.html">Project Deliverables</a></li>
                 <li><a href="team.html">Meet the Team</a></li>
+                <li><a href="demo.html">Program Demo</a></li>
             </ul>
         </nav>
     </header>
@@ -26,6 +27,7 @@
             <a href="Docs/Motion_Pitch.pptx" target="_blank">Project Pitch</a>
             <a href="Docs/Motion_Project_Backlog.xlsx" target="_blank">Project Backlog</a>
             <a href="https://github.com/LilBob0506/MotionProducts" target="_blank">GitHub Repository</a>
+            <a href="https://github.com/LilBob0506/MotionProducts/blob/main/README.md" target="_blank">Program README</a>
         </div>
 
         <h2>Sprint Documents</h2>
@@ -54,8 +56,7 @@
                 <div id="sprint3" class="dropdown-content">
                     <a href="Sprint3/Motion_sprint_3.pptx" target="_blank">Sprint 3 Presentation</a>
                     <a href="Sprint3/Sprint3_Goals_Backlog.docx" target="_blank">Sprint 3 Goals Backlog</a>
-                    <a href="Sprint3/Sprint3DailyJournal.docx" target="_blank">Sprint 3 Daily Journal</a>
-                    <a href="Sprint3/Sprint3Retrospective.docx" target="_blank">Sprint 3 Retrospective</a>
+                    <a href="Sprint3/Sprint3Retrospective.docx" target="_blank">Sprint 3 Backlog</a>
                 </div>
             </div>
         </div>
