--- a/WebsiteAssets/team.html
+++ b/WebsiteAssets/team.html
@@ -14,6 +14,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="deliverables.html">Project Deliverables</a></li>
                 <li><a href="team.html">Meet the Team</a></li>
+                <li><a href="demo.html">Program Demo</a></li>
             </ul>
         </nav>
     </header>
