--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="WebsiteAssets/deliverables.html">Project Deliverables</a></li>
                 <li><a href="WebsiteAssets/team.html">Meet the Team</a></li>
+                <li><a href="WebsiteAssets/demo.html">Program Demo</a></li>
             </ul>
         </nav>
     </header>    
