Project Website Update

--- a/WebsiteAssets/deliverables.html
+++ b/WebsiteAssets/deliverables.html
@@ -56,7 +56,7 @@
                 <div id="sprint3" class="dropdown-content">
                     <a href="Sprint3/Motion_sprint_3.pptx" target="_blank">Sprint 3 Presentation</a>
                     <a href="Sprint3/Sprint3_Goals_Backlog.docx" target="_blank">Sprint 3 Goals Backlog</a>
-                    <a href="Sprint3/Sprint3Retrospective.docx" target="_blank">Sprint 3 Backlog</a>
+                    <a href="Sprint3/Sprint_3_Planning_Doc.docx" target="_blank">Sprint 3 Planning</a>
                 </div>
             </div>
         </div>
