--- a/WebsiteAssets/demo.html
+++ b/WebsiteAssets/demo.html
@@ -23,9 +23,9 @@
         <h2>Program Demonstration</h2>
 
         <!-- Embedded or linked video -->
-        <div class="video-container">
+        <div class="video-container"; style="max-width: fit-content;">
             <video controls>
-                <source src="videos/demo.mp4" type="video/mp4">
+                <source src="videos/Application Video Demo - Motion.com.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -34,7 +34,10 @@
         <section class="demo-instructions">
             <a href="https://github.com/LilBob0506/MotionProducts/blob/main/README.md" target="_blank" style="display: block; text-align: center; margin-top: 20px; font-weight: bold; color: #9e1b32; text-decoration: none;">
                 View README
-              </a>
+            </a>
+            <p style="display: block; text-align: center; margin-top: 20px; font-weight: bold; color: #9e1b32; text-decoration: none;">
+                For how to install and use the program, ways to modify and/or extend the program, and some frequently asked questions. 
+            </p>
         </section>
     </main>
 
