--- a/WebsiteAssets/demo.html
+++ b/WebsiteAssets/demo.html
@@ -23,7 +23,7 @@
         <h2>Program Demonstration</h2>
 
         <!-- Embedded or linked video -->
-        <div class="video-container"; style="max-width: fit-content;">
+        <div class="video-container"; style="width: 90%">
             <video controls>
                 <source src="videos/Application Video Demo - Motion.com.mp4" type="video/mp4">
                 Your browser does not support the video tag.
