Maybe fixed video?

--- a/WebsiteAssets/demo.html
+++ b/WebsiteAssets/demo.html
@@ -25,7 +25,7 @@
         <!-- Embedded or linked video -->
         <div class="video-container"; style="width: 90%">
             <video controls>
-                <source src="videos/Application Video Demo - Motion.com.mp4" type="video/mp4">
+                <source src="https://LilBob0506.github.io/MotionProducts/WebsiteAssets/Videos/Application%20Video%20Demo%20-%20Motion.com.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
